# search-my-dish-backend

./: .dockerignore  .gitignore  Dockerfile  cloudbuild.stg.yaml  docker-compose.yml
.devcontainer/: devcontainer.json
backend/: .env.exmaple  Cargo.toml  Dockerfile
backend/migrations/2022-08-25-084119_create_dishes/: down.sql  up.sql
backend/src/: db.rs  main.rs  models.rs  schema.rs
backend/src/models/: dishes.rs
docker/: Dockerfile  Dockerfile.dev
