[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.10", features = ["serde"] }
derive_more = "0.99.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
r2d2 = "0.8.8"
diesel = { version = "1.4.8", features = ["postgres", "serde_json", "r2d2", "chrono"] }
actix-web = "4"
dotenv = "0.15.0"
actix-cors = "0.6.2"
